# cartograph

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
cartograph/: __init__.py  cli.py  config.py  context_affinity.py  demo.py  embed.py  ingest.py  insights.py  intent.py  learned_fields.py  mcp_server.py  rerank_model.py  retrieve.py  router.py  security.py  storage.py  workflow.py
cartograph/elite/: __init__.py  catalog.py  dod.py  elevate.py  frontier.py  playbooks.py
cartograph/persona/: __init__.py  profile.py  signals.py  steer.py
cartograph/vision/: __init__.py  capture.py  dedup.py  ocr.py  pipeline.py  redact.py  watch.py
cartograph/viz/: __init__.py  app.py  index.html  studio.html
config/: cartograph.example.yaml
docs/: ARCHITECTURE.md  AUDIT_DUAL_USERS.md  BROWSER.md  PERSONA.md  PUBLISHING.md  REFERENCE_PACKS.md  SCALING.md  SELF_AUDIT.md  V1_AUDIT.md  V1_TRIAL.md
examples/sample_data/ml_project/: train.py
examples/sample_data/web_app/: README.md
scripts/: build_reference_pack.py  gen_hero_gif.py  gen_hero_svg.py  launch_viz.bat  launch_viz.sh
tests/: conftest.py  test_agent_and_budget.py  test_context_affinity.py  test_demo_and_loop.py  test_integration.py  test_intent.py  test_learned_fields.py  test_persona.py  test_reranker.py  test_router.py  test_security.py  test_smoke.py  test_steer_gate.py  test_studio_server.py  test_vision.py  test_workflow.py
