[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cartograph"
version = "0.1.0"
description = "Build a personal cognitive graph of everything you work with, and plug it into your AI agents."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Cartograph contributors" }]
keywords = ["rag", "knowledge-graph", "retrieval", "mcp", "ai-agents", "embeddings", "local-first"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]

# Core deps are intentionally tiny: a fully-working graph + FTS + viz + MCP with ZERO heavy ML.
# Semantic search, embeddings, and training are opt-in extras so the base install is instant.
dependencies = [
    "typer>=0.9",
    "rich>=13",
    "pyyaml>=6",
]

[project.optional-dependencies]
# Semantic retrieval (GPU-accelerated if torch sees CUDA, else CPU). ~2GB download.
semantic = ["sentence-transformers>=2.6", "numpy>=1.24"]
# Graph ML: train your own link-prediction / recommendation models on YOUR graph.
ml = ["torch>=2.0", "scikit-learn>=1.3", "numpy>=1.24"]
# Everything.
full = ["sentence-transformers>=2.6", "torch>=2.0", "scikit-learn>=1.3", "numpy>=1.24"]
dev = ["pytest>=7"]

[project.scripts]
carto = "cartograph.cli:app"

[project.urls]
Homepage = "https://github.com/pbathuri/cartograph"
Documentation = "https://github.com/pbathuri/cartograph#readme"

[tool.setuptools.packages.find]
include = ["cartograph*"]
