[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
# PyPI distribution name (the import module stays `cartograph` and the CLI stays `carto`).
name = "cartograph__v1"
version = "1.0.0"
description = "Build a personal cognitive graph of everything you work with, and plug it into your AI agents."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Cartograph contributors" }]
keywords = ["rag", "knowledge-graph", "retrieval", "mcp", "ai-agents", "embeddings", "local-first"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]

# Core deps are intentionally tiny: a fully-working graph + FTS + viz + MCP with ZERO heavy ML.
# Semantic search, embeddings, and training are opt-in extras so the base install is instant.
dependencies = [
    "typer>=0.9",
    "rich>=13",
    "pyyaml>=6",
]

[project.optional-dependencies]
# Semantic retrieval (GPU-accelerated if torch sees CUDA, else CPU). ~2GB download.
# einops is required by the default nomic embedding model's remote code.
semantic = ["sentence-transformers>=2.6", "numpy>=1.24", "einops>=0.7"]
# Graph ML: train your own link-prediction / recommendation models on YOUR graph.
ml = ["torch>=2.0", "scikit-learn>=1.3", "numpy>=1.24"]
# Real-time vision: screen capture + OCR feeding the graph (also needs the Tesseract binary on PATH).
vision = ["mss>=9.0", "pillow>=10.0", "pytesseract>=0.3.10"]
# At-rest encryption for sensitive data (e.g. screen captures) + secure local surfaces.
secure = ["cryptography>=42.0"]
# Everything.
full = ["sentence-transformers>=2.6", "torch>=2.0", "scikit-learn>=1.3", "numpy>=1.24", "einops>=0.7",
        "mss>=9.0", "pillow>=10.0", "pytesseract>=0.3.10", "cryptography>=42.0"]
dev = ["pytest>=7", "numpy>=1.24", "ruff>=0.6"]  # numpy: unit tests for learned models; ruff: lint

[project.scripts]
carto = "cartograph.cli:app"

[project.urls]
Homepage = "https://github.com/pbathuri/cartograph"
Documentation = "https://github.com/pbathuri/cartograph#readme"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
# E402 in cli.py is intentional: stdout/stderr must be reconfigured to UTF-8 (Windows) before other imports.
per-file-ignores = { "cartograph/cli.py" = ["E402"] }

[tool.setuptools.packages.find]
include = ["cartograph*"]

[tool.setuptools.package-data]
"cartograph.viz" = ["*.html"]
